--- a/src/Filter.scss
+++ b/src/Filter.scss
@@ -28,8 +28,7 @@
     border-bottom: double;
   }
 
-  @media print
-  {
-      display: none !important;
+  @media print {
+    display: none !important;
   }
 }
